<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <include layout="@layout/top_bar_main" />

    <ImageView
        android:id="@+id/mConsultHeadImg"
        android:layout_width="match_parent"
        android:layout_height="120.0dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/banner3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8.0dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8.0dp" >

        <ImageView
            android:id="@+id/mContact1"
            android:layout_width="48.0dp"
            android:layout_height="48.0dp"
            android:layout_weight="1.0"
            android:src="@drawable/appicon_online" />

        <ImageView
            android:id="@+id/mContact2"
            android:layout_width="48.0dp"
            android:layout_height="48.0dp"
            android:layout_weight="1.0"
            android:src="@drawable/appicon_phone" />

        <ImageView
            android:id="@+id/mContact3"
            android:layout_width="48.0dp"
            android:layout_height="48.0dp"
            android:layout_weight="1.0"
            android:src="@drawable/appicon_overseas" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8.0dp"
        android:paddingTop="4.0dp" >

        <TextView
            android:layout_width="48.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/online_consult"
            android:textColor="@color/text_color_default"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="48.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/phone_consult"
            android:textColor="@color/text_color_default"
            android:textSize="14.0sp" />

        <TextView
            android:layout_width="48.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/overseas_consult"
            android:textColor="@color/text_color_default"
            android:textSize="14.0sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10.099976dp"
        android:layout_marginTop="8.0dp"
        android:background="@color/default_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dp"
            android:layout_marginLeft="8.0dp"
            android:layout_marginTop="16.0dp"
            android:text="@string/commonQuestion_consult"
            android:textColor="@color/text_color_light_gray"
            android:textSize="13.0sp" />

        <TextView
            android:id="@+id/consult_more"
            android:layout_width="100.0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="4.0dp"
            android:layout_marginLeft="8.0dp"
            android:layout_marginTop="16.0dp"
            android:gravity="right"
            android:paddingRight="16.0dp"
            android:text="@string/more_consult"
            android:textColor="@color/text_color_light_gray"
            android:textSize="13.0sp" />
    </RelativeLayout>

    <include layout="@layout/tabs_fragment_listline" />

    <LinearLayout
        android:id="@+id/mFAQLayoutRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5.0dp" />

    <include layout="@layout/tabs_fragment_consult_fag_item" />

</LinearLayout>